--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -22,6 +22,7 @@ jobs:
           framework: terraform # optional: run only on a specific infrastructure {cloudformation,terraform,kubernetes,all}
           output_format: github_failed_only # optional: the output format, one of: cli, json, junitxml, github_failed_only, or sarif. Default: sarif
           download_external_modules: true # optional: download external terraform modules from public git repositories and terraform registry
+          github_pat: ${{ secrets.GIHUB_TOKEN }}
           log_level: WARNING # optional: set log level. Default WARNING
           # external_checks_dirs: ../Modules/S3, ../Modules/Database, ../Modules
           # config_file: path/this_file
