tf 1.3.0 doesn't required experiments = [module_variable_optional_attrs] │

--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -1,10 +1,10 @@
-name: Release
+name: checkov
 on: push
 
 jobs:
   checkov-job:
     runs-on: ubuntu-latest
-    name: Release
+    name: checkov
     steps:
       - name: Checkout repo
         uses: actions/checkout@master
