--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@master
 
-      - name: module vpc
+      - name: DEMO-AWS-CLOUDDAY-VN
         id: checkov
         uses: bridgecrewio/checkov-action@v12.1347.0
         with:
