--- a/.github/workflows/infra-cost.yaml
+++ b/.github/workflows/infra-cost.yaml
@@ -13,7 +13,7 @@ jobs:
       contents: read
       pull-requests: write
     env:
-      TF_ROOT: terraform/ap-southeast-1/infracost.yml
+      TF_ROOT: terraform/ap-southeast-1
       # This instructs the CLI to send cost estimates to Infracost Cloud. Our SaaS product
       #   complements the open source CLI by giving teams advanced visibility and controls.
       #   The cost estimates are transmitted in JSON format and do not contain any cloud 
