--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -30,3 +30,5 @@ jobs:
           # config_file: path/this_file
           # baseline: ./checkov-report/.checkov.baseline # optional: Path to a generated baseline file. Will only report results not in the baseline.
           container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issue
+        env:
+          GITHUB_OVERRIDE_URL: true  # optional: this can be used to instruct the action to override the global GIT config to inject the PAT to the URL
