--- a/application/ap-southeast-1/managed/infra/ingress.yaml
+++ b/application/ap-southeast-1/managed/infra/ingress.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ingress
+  name: ingress-public
 spec:
   project: cloud-day-demo
   destination:
-    namespace: ingress
+    namespace: ingress-public
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
@@ -35,12 +35,6 @@ spec:
               preferredDuringSchedulingIgnoredDuringExecution:
                 - weight: 100
                   podAffinityTerm:
-                    # labelSelector:
-                    #   matchExpressions:
-                    #     - key: ingress.playstudios.asia/class
-                    #       operator: In
-                    #       values:
-                    #         - public
                     topologyKey: kubernetes.io/hostname
           resources:
             requests:
@@ -67,13 +61,12 @@ spec:
               maxSurge: 20%
               maxUnavailable: 0
           service:
-            type: ClusterIP
-            # externalTrafficPolicy: Cluster
-            # annotations:
-            #   service.beta.kubernetes.io/aws-load-balancer-type: nlb
-          #metrics:
-          #  enabled: true
-          #  serviceMonitor:
-          #    enabled: true
+            externalTrafficPolicy: Local
+            annotations:
+              service.beta.kubernetes.io/aws-load-balancer-type: nlb
+          metrics:
+           enabled: true
+           serviceMonitor:
+             enabled: true
           admissionWebhooks:
             enabled: false
