--- a/application/ap-southeast-1/managed/infra/cert-manager.yaml
+++ b/application/ap-southeast-1/managed/infra/cert-manager.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: cloud-day-demo
   destination:
-    name: cloud-day-demo
+    server: https://kubernetes.default.svc
     namespace: ingress
   syncPolicy:
     automated:
