--- a/application/ap-southeast-1/managed/infra/cert-manager.yaml
+++ b/application/ap-southeast-1/managed/infra/cert-manager.yaml
@@ -6,7 +6,7 @@ spec:
   project: cloud-day-demo
   destination:
     server: https://kubernetes.default.svc
-    namespace: ingress
+    namespace: cert-manager
   syncPolicy:
     automated:
       prune: true
