--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -1,12 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook
+  name: http-echo
 spec:
   project: cloud-day-demo
   destination:
     server: https://kubernetes.default.svc
-    namespace: guestbook
+    namespace: http-echo
   syncPolicy:
     automated:
       prune: true
