--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -15,7 +15,7 @@ spec:
       - CreateNamespace=true
   source:
     repoURL: https://ealenn.github.io/charts
-    chart: ealenn
+    chart: echo-server
     targetRevision: 0.5.0
     helm: 
       values: |
