--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -24,8 +24,10 @@ spec:
         ingress:
           enabled: true
           ingressClassName: nginx
-          tls: 
-            - http-echo-tls
+          tls:
+            - secretName: http-echo-tls
+              hosts:
+                - http-echo.hungran.cloud
           hosts:
             host: http-echo.hungran.cloud
             path: "/"
