--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -30,3 +30,5 @@ spec:
                 - http-echo.hungran.cloud
           hosts:
             - host: http-echo.hungran.cloud
+              paths:
+              - /
