--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -32,3 +32,5 @@ spec:
             - host: http-echo.hungran.cloud
               paths:
               - /
+          annotations:
+            kubernetes.io/ingress.class: nginx
