--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -14,18 +14,17 @@ spec:
     syncOptions:
       - CreateNamespace=true
   source:
-    repoURL: https://ealenn.github.io/charts
-    chart: echo-server
-    targetRevision: 0.5.0
+    repoURL: https://hungran.github.io/chart-repo-template/
+    chart: http-echo
+    targetRevision: 0.1.0
     helm: 
       values: |
-        ---
         #
         # IMPORTANT NOTE
         #
-        # This chart inherits from the k8s-at-home common library chart. You can check
+        # This chart inherits from the http-echo common library chart. You can check
         # the default values/options here:
-        #   https://github.com/k8s-at-home/library-charts/tree/main/charts/stable/common/values.yaml
+        #   https://github.com/hungran/chart-repo-template
         #
 
         image:
@@ -33,9 +32,7 @@ spec:
           pullPolicy: IfNotPresent
           # Overrides the image tag whose default is the chart appVersion.
           # tag: "0.2.3"
-
-        # text to send in reply to an HTTP GET
-        text: "HELLO FROM VIETAWS"
+        arguments: ['--text', 'hello']
 
         # This is a simple echo service so we always harden.
         securityContext:
@@ -46,45 +43,24 @@ spec:
           runAsNonRoot: true
           runAsUser: 1000
 
-        # -- environment variables. See [application docs](https://docs.miguelndecarvalho.pt/projects/speedtest-exporter/) for more details.
-        # @default -- See below
-        env:
-          # -- Set the container timezone
-          TZ: UTC
-
-        # -- Configures service settings for the chart.
-        # @default -- See values.yaml
-        service:
-          main:
-            nameOverride: http-echo
-            ports:
-              http:
-                port: 5678
-
         ingress:
-          # -- Enable and configure ingress settings for the chart under this key.
-          # @default -- See values.yaml
-          main:
-            enabled: true
-
-          ## Configure the hosts for the ingress
+          enabled: true
+          className: nginx
+          annotations: {}
+            # kubernetes.io/ingress.class: nginx
+            # kubernetes.io/tls-acme: "true"
           hosts:
-            -  # -- Host address. Helm template can be passed.
-              host: http-echo.hungran.cloud
-              ## Configure the paths for the host
+            - host: http-echo.hungran.cloud
               paths:
-                -  # -- Path.  Helm template can be passed.
-                  path: /
-                  # -- Ignored if not kubeVersion >= 1.14-0
-                  pathType: Prefix
-                  service:
-                    # -- Overrides the service name reference for this path
-                    name: http-echo
-                    # -- Overrides the service port reference for this path
-                    port: 5678
+                - path: /
+                  pathType: ImplementationSpecific
+          tls:
+          - secretName: http-echo-tls
+            hosts:
+              - http-echo.hungran.cloud
+        autoscaling:
+          enabled: false
+          minReplicas: 2
+          maxReplicas: 3
+          targetCPUUtilizationPercentage: 80
 
-          # -- Configure TLS for the ingress. Both secretName and hosts can process a Helm template.
-          tls: 
-           - secretName: http-echo-tls
-             hosts:
-               - http-echo.hungran.cloud
