--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -14,9 +14,9 @@ spec:
     syncOptions:
       - CreateNamespace=true
   source:
-    repoURL: https://hungran.github.io/chart-repo-template/
+    repoURL: https://github.com/hungran/http-echo-helm-chart.git
     chart: http-echo
-    targetRevision: 0.1.0
+    targetRevision: 0.1.1
     helm: 
       values: |
         #
