--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -15,7 +15,7 @@ spec:
       - CreateNamespace=true
   source:
     repoURL: https://github.com/playstudios/jarvis-microservice.git
-    path: charts
+    path: charts/http-echo
     targetRevision: 0.1.1
     helm: 
       values: |
