--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -16,7 +16,7 @@ spec:
   source:
     repoURL: https://github.com/hungran/http-echo-helm-chart.git
     path: charts/http-echo
-    targetRevision: 0.1.1
+    targetRevision: "http-echo-0.1.1"
     helm: 
       values: |
         #
