--- a/application/ap-southeast-1/manifests/cert-manager.yaml
+++ b/application/ap-southeast-1/manifests/cert-manager.yaml
@@ -4,3 +4,37 @@ metadata:
   name: self-signed
 spec:
   selfSigned: {}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cert-manager
+  annotations:
+    linkerd.io/inject: disabled
+  labels:
+    config.linkerd.io/admission-webhooks: disabled
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt
+spec:
+  acme:
+    preferredChain: "ISRG Root X1"
+    email: admin-group@playstudios.asia
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: letsencrypt
+    solvers:
+      - selector:
+          dnsZones:
+            - "hungran.cloud"
+      - dns01:
+          cloudflare:
+            email: vmhung290791@gmail.com
+            apiKeySecretRef:
+              name: cloudflare-api-key-secret
+              key: api-key
+#       - http01:
+#           ingress:
+#             class:  nginx
