--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -55,7 +55,7 @@ spec:
                 - path: /
                   pathType: ImplementationSpecific
           tls:
-          - secretName: http-echo-tls
+          - secretName: http-echo-tls-secret
             hosts:
               - http-echo.hungran.cloud
         autoscaling:
