--- a/application/ap-southeast-1/manifests/cert-manager.yaml
+++ b/application/ap-southeast-1/manifests/cert-manager.yaml
@@ -26,10 +26,7 @@ spec:
     privateKeySecretRef:
       name: letsencrypt
     solvers:
-      - selector:
-          dnsZones:
-            - "hungran.cloud"
-        dns01:
+      - dns01:
           cloudflare:
             email: vmhung290791@gmail.com
             apiKeySecretRef:
