--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -48,16 +48,17 @@ spec:
           className: nginx
           annotations: {}
             # kubernetes.io/ingress.class: nginx
-            # kubernetes.io/tls-acme: "true"
+            kubernetes.io/tls-acme: "true"
+            nginx.ingress.kubernetes.io/service-upstream: "true"
           hosts:
             - host: http-echo.hungran.cloud
               paths:
                 - path: /
                   pathType: ImplementationSpecific
           tls:
-          - secretName: http-echo-hungran-cloud-tls-secret
-            hosts:
-              - http-echo.hungran.cloud
+            - secretName: http-echo-hungran-cloud-tls-secret
+              hosts:
+                - http-echo.hungran.cloud
         autoscaling:
           enabled: false
           minReplicas: 2
