--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -46,7 +46,7 @@ spec:
         ingress:
           enabled: true
           className: nginx
-          annotations: {}
+          annotations:
             # kubernetes.io/ingress.class: nginx
             kubernetes.io/tls-acme: "true"
             nginx.ingress.kubernetes.io/service-upstream: "true"
@@ -56,9 +56,9 @@ spec:
                 - path: /
                   pathType: ImplementationSpecific
           tls:
-            - secretName: http-echo-hungran-cloud-tls-secret
-              hosts:
-                - http-echo.hungran.cloud
+          - secretName: http-echo-hungran-cloud-tls-secret
+            hosts:
+              - http-echo.hungran.cloud
         autoscaling:
           enabled: false
           minReplicas: 2
