use API TOKEN instead API KEY

--- a/application/ap-southeast-1/manifests/cert-manager.yaml
+++ b/application/ap-southeast-1/manifests/cert-manager.yaml
@@ -30,8 +30,8 @@ spec:
           cloudflare:
             email: vmhung290791@gmail.com
             apiKeySecretRef:
-              name: cloudflare-api-key-secret
-              key: api-key
+              name: cloudflare-api-token-secret
+              key: api-token
 #       - http01:
 #           ingress:
 #             class:  nginx
