--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -32,7 +32,7 @@ spec:
           pullPolicy: IfNotPresent
           # Overrides the image tag whose default is the chart appVersion.
           # tag: "0.2.3"
-        arguments: ['--text', 'hello from VietAWS - Demo AWS CloudDay']
+        arguments: ['--text', 'hello from VietAWS - Demo AWS CloudDay - Thank you for listening']
 
         # This is a simple echo service so we always harden.
         securityContext:
