--- a/application/ap-southeast-1/managed/infra/crossplane.yaml
+++ b/application/ap-southeast-1/managed/infra/crossplane.yaml
@@ -1,25 +1,25 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: kind-hung-cluster-crossplane
-# spec:
-#   project: kind-hung-cluster-local
-#   destination:
-#     name: kind-hung-cluster-local
-#     namespace: crossplane
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#       - CreateNamespace=true
-#   source:
-#     repoURL: https://charts.crossplane.io/stable
-#     chart: crossplane
-#     targetRevision: 1.10.0
-#     helm:
-#       version: v3
-#       values: |
-#         replicas: 2
-#         metrics:
-#           enabled: true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: crossplane-controller
+spec:
+  project: cloud-day-demo
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: crossplane
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+  source:
+    repoURL: https://charts.crossplane.io/stable
+    chart: crossplane
+    targetRevision: 1.12.0-rc.0.262.gd767623c
+    helm:
+      version: v3
+      values: |
+        replicas: 2
+        metrics:
+          enabled: true
