--- a/application/ap-southeast-1/managed/infra/crossplane.yaml
+++ b/application/ap-southeast-1/managed/infra/crossplane.yaml
@@ -16,7 +16,7 @@ spec:
   source:
     repoURL: https://charts.crossplane.io/stable
     chart: crossplane
-    targetRevision: 1.12.0-rc.0.262.gd767623c
+    targetRevision: 1.11.3
     helm:
       version: v3
       values: |
