--- a/application/ap-southeast-1/manifests/ProviderInstall.yaml
+++ b/application/ap-southeast-1/manifests/ProviderInstall.yaml
@@ -4,3 +4,10 @@
 #   name: provider-aws
 # spec:
 #   package: "xpkg.upbound.io/crossplane-contrib/provider-aws:v0.33.0"
+
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-aws
+spec:
+  package: xpkg.upbound.io/upbound/provider-aws:v0.32.1
