--- a/application/ap-southeast-1/manifests/ProviderInstall.yaml
+++ b/application/ap-southeast-1/manifests/ProviderInstall.yaml
@@ -10,4 +10,4 @@ kind: Provider
 metadata:
   name: provider-aws
 spec:
-  package: xpkg.upbound.io/upbound/provider-aws:v0.21.0
+  package: xpkg.upbound.io/upbound/provider-aws:latest
