--- a/application/ap-southeast-1/managed/apps/argocd.yaml
+++ b/application/ap-southeast-1/managed/apps/argocd.yaml
@@ -4,7 +4,7 @@
 #   name: argocd
 # spec:
 #   destination:
-#     server: https://kubernetes.default.svc
+#     server: https://1470FBE09E07236EE4CF9E9295AE3126.gr7.ap-southeast-1.eks.amazonaws.com
 #     namespace: argocd
 
 #   # To avoid getting ourselves a bit stuck,
