--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -3,9 +3,9 @@ kind: Application
 metadata:
   name: http-echo
 spec:
-  project: cloud-day-demo
+  project: vntechies
   destination:
-    server: https://kubernetes.default.svc
+    server: https://1470FBE09E07236EE4CF9E9295AE3126.gr7.ap-southeast-1.eks.amazonaws.com
     namespace: http-echo
   syncPolicy:
     automated:
