--- a/application/ap-southeast-1/managed/apps/argo-rollout.yaml
+++ b/application/ap-southeast-1/managed/apps/argo-rollout.yaml
@@ -9,7 +9,7 @@
 #     chart: argo-rollouts
 #     targetRevision: 2.20.0
 #   destination:
-#     server: 'https://kubernetes.default.svc'
+#     server: 'https://1470FBE09E07236EE4CF9E9295AE3126.gr7.ap-southeast-1.eks.amazonaws.com'
 #     namespace: argocd
 #   syncPolicy:
 #     syncOptions:
