--- a/application/ap-southeast-1/managed/infra/external-dns.yaml
+++ b/application/ap-southeast-1/managed/infra/external-dns.yaml
@@ -3,9 +3,9 @@ kind: Application
 metadata:
   name: external-dns
 spec:
-  project: cloud-day-demo
+  project: vntechies
   destination:
-    server: https://kubernetes.default.svc
+    server: https://1470FBE09E07236EE4CF9E9295AE3126.gr7.ap-southeast-1.eks.amazonaws.com
     namespace: external-dns
   syncPolicy:
     automated:
