--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -60,8 +60,8 @@ spec:
               hosts:
                 - http-echo.hungran.cloud
         autoscaling:
-          enabled: false
-          minReplicas: 4
-          maxReplicas: 10
+          enabled: true
+          minReplicas: 1
+          maxReplicas: 2
           targetCPUUtilizationPercentage: 80
 
