--- a/application/ap-southeast-1/managed/apps/http-echo.yaml
+++ b/application/ap-southeast-1/managed/apps/http-echo.yaml
@@ -32,8 +32,8 @@ spec:
           pullPolicy: IfNotPresent
           # Overrides the image tag whose default is the chart appVersion.
           tag: "latest"
-        arguments: ['--text', 'hello from VietAWS - Demo AWS CloudDay - Thank you for listening']
-
+        # arguments: ['--text', 'hello from VietAWS - Demo AWS CloudDay - Thank you for listening']
+          arguments: []
         # This is a simple echo service so we always harden.
         securityContext:
           capabilities:
